--- a/src/main/java/resources/data.properties
+++ b/src/main/java/resources/data.properties
@@ -1,2 +1,10 @@
 browser=chrome
 url=https://shop.bestseller.com/pl/pl/home
+email=bestsellerselenium@mailinator.com
+password=123456
+name=Artur
+lastname=Babenko
+address=ul. Jana Matejki
+postalcode=72-100
+city=Goleniow
+telnumber=733368459
